<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/itemInvoiceHeight"
    android:layout_marginStart="@dimen/marginStart"
    android:layout_marginTop="@dimen/itemInvoiceMarginTop"
    android:layout_marginEnd="@dimen/itemInvoiceMarginEnd"
    android:layout_marginBottom="@dimen/itemInvoiceMarginBottom"
    android:background="?attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_invoice_fecha"
            android:textSize="@dimen/tvFechaSize" />

        <TextView
            android:id="@+id/tvEstado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_invoice_estado"
            android:textSize="@dimen/tvEstadoSize"
            app:layout_constraintTop_toBottomOf="@+id/tvFecha" />
    </LinearLayout>


    <TextView
        android:id="@+id/tvImporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_invoice_importe"
        android:textSize="@dimen/tvImporteSize"
        app:drawableRightCompat="@drawable/ic_baseline_chevron_right_36"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>